<resources>
    <string name="app_name">Android Components</string>
    <string name="start_compose_activity">Start Compose Activity</string>
    <string name="result_from_compose_activity">Result from ComposeActivity: %1$s</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="hello_from_main_activity">Hello from MainActivity!</string>
    <string name="start_local_service">Start Local Service</string>
    <string name="bind_local_service">Bind Local Service</string>
    <string name="call_local_service">Call Local Service</string>
    <string name="toast_local_service_is_not_bound">Local service is not bound</string>
    <string name="toast_local_service_started">Local service started</string>
    <string name="toast_local_service_destroyed">Local service destroyed</string>
    <string name="toast_service_task_already_running">Local service task is already running</string>
    <string name="toast_message_from_remote_service">Message from "remote" service</string>
    <string name="bind_remote_service">Bind Remote Service</string>
    <string name="call_remote_service">Call Remote service</string>
    <string name="toast_remote_service_is_not_bound">Remote service is not bound</string>
    <string name="start_services_activity">Start Services Activity</string>
    <string name="message_from_local_service">Message from local service</string>
    <string name="toast_job_service_started">Job service started</string>
    <string name="schedule_job_for_job_service">Schedule job for Job Service</string>
    <string name="toast_job_scheduler_requires_api_26">JobScheduler requires API level 26</string>
    <string name="load_data">Load Data</string>
    <string name="toast_load_paused">Load paused</string>
    <string name="toast_load_resumed">Load resumed</string>
    <string name="toast_all_data_loaded">All data loaded</string>
    <string name="start_broadcasts_activity">Start Broadcasts Activity</string>
    <string name="user_id">User ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="insert_user">Insert User</string>
    <string name="query_users">Query Users</string>
    <string name="update_user">Update User</string>
    <string name="delete_user">Delete User</string>
    <string name="results_will_be_displayed_here">Results will be displayed here</string>
    <string name="user_inserted_message">User inserted: ID=%1$d, Name=%2$s %3$s</string>
    <string name="enter_user_info">Enter user info</string>
    <string name="updated_users">Updated %1$d users</string>
    <string name="deleted_users">Deleted %1$d users</string>
    <string name="start_providers_activity">Start Providers Activity</string>
    <string name="query_contacts">Query Contacts</string>
</resources>