<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/user_id"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/first_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/last_name"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonInsertUser"
        style="@style/button"
        android:text="@string/insert_user" />

    <Button
        android:id="@+id/buttonQueryUser"
        style="@style/button"
        android:text="@string/query_users" />

    <Button
        android:id="@+id/buttonUpdateUser"
        style="@style/button"
        android:text="@string/update_user" />

    <Button
        android:id="@+id/buttonDeleteUser"
        style="@style/button"
        android:text="@string/delete_user" />

    <Button
        android:id="@+id/buttonQueryContacts"
        style="@style/button"
        android:text="@string/query_contacts" />

    <TextView
        android:id="@+id/textViewResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/results_will_be_displayed_here"
        android:textSize="16sp" />

</LinearLayout>
